--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -744,8 +744,7 @@
             
         #masters-tools {
             position: absolute;
-            background: #fff;
-            bottom: 4px;
+            bottom: 0;
             left: 0;
             width: 100%;
             border-top: 2px solid #eee;
@@ -799,6 +798,10 @@
             position: relative;
         }
         
+        #instances-list .list-li {
+            border-bottom: 0;
+        }
+        
             .inactive-master .list-li {
                 background: #fff!important;
                 transition: background 1s;
@@ -814,6 +817,10 @@
                 height: 100%;
                 position: relative;
             }
+            
+                #instances-list .list-sequence-col {
+                    border-bottom: 2px solid #eee;
+                }
                     
                 .master-diamond  svg {
                     margin: 10px 7px;
@@ -845,6 +852,10 @@
             font-size: 17px;
             cursor: default;
         }
+        
+            #instances-list .list-view-col {
+                border-bottom: 2px solid #eee;
+            }
                 
             .temp-view-selection-true {
                 background: #515151!important;
@@ -889,6 +900,11 @@
             white-space: nowrap;
             overflow: hidden;
         }
+        
+                #instances-list .list-edit-col {
+                    border-bottom: 2px solid #eee;
+                    border-right: 2px solid #eee;
+                }
             
 
 
@@ -1119,10 +1135,15 @@
         display: block;
     }
     
+        #instances-extra-wide {
+            width: calc(100% + 104px);
+            position: relative;
+            padding: 2px;
+        }
+    
         #instances-list {
             height: calc(100% - 63px);
             overflow: auto;
-            width: calc(100% + 90px);
         }
 
         instances ul {
@@ -1134,11 +1155,19 @@
                 list-style: none;
             }
             
-        #instances-tools {
-            width: calc(100% + 80px);
+        #instance-tools-container {
+            width: 100%;
+            height: 34px;
             position: absolute;
-            bottom: 5px;
-            left: 5px;
+            bottom: 0;
+            left: 0;
+        }
+            
+        #instances-tools {
+            width: calc(100% - 102px);
+            height: 100%;
+            display: inline-block;
+            float: left;
             border-top: 2px solid #eee;
         }
         
@@ -1149,23 +1178,51 @@
                 display: inline-block;
                 cursor: pointer;
                 text-align: center;
-                border-right: 1px solid #ddd;
-                background: #fff;
+                border-right: 2px solid #eee;
             }
             
             .inactive {
                 opacity: 0.5;
             }
-     
+            
+        #export-button {
+            float: right;
+            display: inline-block;
+            width: 94px;
+            height: 100%;
+            text-align: center;
+            background: #ddd;
+            padding: 8px;
+            cursor: default;
+        }
+         
      
      
      
             
 /**************** export fonts ************************/
 
-
+    #fake-fontexport-panel {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 94px;
+        border: 2px solid #eee;
+        height: 100%;
+    }
+    
+    #fake-instances-panel {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: calc(100% - 102px);
+        border: 2px solid #eee;
+        height: 100%;
+    }
+    
+    
     #instances-list .list-edit-col {
-        width: calc(100% - 146px);
+        width: calc(100% - 156px);
     }
 
     fontexport.sub-panel {
@@ -1182,27 +1239,33 @@
         }
        
     .export-col {
-        width: 90px;
+        width: 100px;
         float: left;
         height: 100%;
-        background: #aaa;
-        cursor: default;
-        text-align: center;
-        font-size: 24px;
-        line-height: 20px;
     }
+    
+        .instance-spacer {
+            width: 8px;
+            height: 100%;
+            display: inline-block;
+            float: left;
+            background: white;
+        }
         
-    #export-button {
-        float: right;
-        width: 90px;
-        border-left: 1px solid #ddd;
-        border-right: 1px solid #ddd;
-        height: 32px;
-        text-align: center;
-        background: #ddd;
-        padding: 8px;
-        cursor: default;
-    }
+        .instance-checkmark {
+            height: 100%;
+            width: calc(100% - 10px);
+            border-bottom: 2px solid #eee;
+            border-left: 2px solid #eee;
+            cursor: default;
+            text-align: center;
+            font-size: 24px;
+            line-height: 20px;
+            display: inline-block;
+            float: left;
+        }
+        
+
             
             
             
