#342 two edit states: for parameter view and DS view

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -805,6 +805,7 @@
             border-bottom: 2px solid #eee;
             background: #fff;
             position: relative;
+            transition: background 1s;
         }
         
         #instances-list .list-li {
