--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -16,7 +16,7 @@
         <ul>
             <li ng-repeat="sequence in data.sequences">
                 <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="list-ul">
-                    <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-mouseover="mouseoverMaster(master)" ng-mouseleave="mouseleaveMaster(master)" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit}">
+                    <li master="{{master.id}}" sequence="{{sequence.id}}" display="{{master.display}}" ng-mouseover="mouseoverMaster(master)" ng-mouseleave="mouseleaveMaster(master)" ng-repeat="master in sequence.masters" class="list-li" ng-class="{'selected': master.edit[data.view.viewState]}">
                         <span class="list-sequence-col master-diamond" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
                             <svg height="12" width="12">
                                 <polygon points="5,0 0,3 0,8 5,11 10,8 10,3">
@@ -29,7 +29,7 @@
                                 </li>
                             </ul>
                         </span>
-                        <span class="list-edit-col rename" ng-model="master.displayName" ng-class="{'selected': master.edit}"></span>
+                        <span class="list-edit-col rename" ng-model="master.displayName"></span>
                     </li>
                 </ul>
             </li>
