Repair specimen type setting, see #429
glyphs must be 'box-sizing: content-box' which is the default usually
but overidded by the stylesheets. Because the glyphs actually use borders,
to indicate their selection status, this wrecked the sizing.

must (re-)set the glyph width to 'auto' on every resizing

subtle bug that lead to wrong UPM
better calculation of parent width workaround

don't leak whitspace around glyphs (by using comments)

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -383,6 +383,7 @@
             
             glyph {
                 display: block;
+                box-sizing: content-box;
             }
             
             .list-view-col glyph {
