#408 use the hello.svg

--- a/purple-pill/templates/designspace.html
+++ b/purple-pill/templates/designspace.html
@@ -22,8 +22,7 @@
 
 <div class="design-space drop-area" ng-class="{unconfigured : data.currentDesignspace.type =='x'}">
     <div class="design-space-container" ng-show="data.currentDesignspace.type == 'x'">
-        Drag a master from the left panel into this Design Space. When you drop your first master, an instance of it is created. You will need at least
-        two masters to affect interpolation to your instance.
+        <img src="img/hello.svg" height="100%" width="auto">
     </div>
     
     <div class="" ng-show="data.currentDesignspace.type != 'x'">
