--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -1,36 +1,42 @@
 <div id="project">
-    <div id="project-dropdown" class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Project</b> {{projectName}} <span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu">
-            <li>
-                <a href="#">New</a>
-            </li>
-            <li>
-                <a href="#">Clone</a>
-            </li>
-            <li>
-                <a href="#">Open</a>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <a href="#">Save</a>
-            </li>
-            <li>
-                <a href="#">Save As…</a>
-            </li>
-        </ul>
-    </div>
+    <localmenu class="localmenu" class="left">
+        <div class="lm-head" ng-mousedown="data.selectMenu('project')">
+            <b>Project</b> <span id="project-name" ng-model="data.projectName" class="project-rename"></span>
+        </div>
+        <div class="lm-body" ng-if="data.localmenu.project">
+            <div class="lm-button" ng-mouseup="newDocument()">New</div>
+            <div class="lm-divider"></div>
+            <div class="lm-button" ng-mouseup="closeDocument()">Close</div>
+            <div class="lm-divider"></div>
+            <div class="lm-button" ng-mouseup="renameProject()">Rename project</div>
+        </div>
+    </localmenu>
 </div>
 <!-- end of project -->
 
 <div id="view-buttons">
-    <div id="menu-item-0" class="menu-item menu-item-current">
-        Parameters
+    <div ng-repeat="menuItem in data.view.menuItems" ng-click="data.view.viewState = $index" class="menu-item" ng-class="{'menu-item-current': $index == data.view.viewState }">
+        {{menuItem}}
     </div>
-    <div id="menu-item-1" class="menu-item">
-        Design spaces
-    </div>
-    <div id="menu-item-2" class="menu-item">
-        Fonts
-    </div>
+</div>
+<!-- end of view buttons -->
+
+<div id="help" class="unselectable">
+    <localmenu class="localmenu right">
+        <div class="lm-head" ng-mousedown="data.selectMenu('help')">
+            <b>Help</b>
+        </div>
+        <div class="lm-body" ng-if="data.localmenu.help">
+            <div class="lm-button"><a href="https://github.com/metapolator/metapolator" target="_blank">Github Project</a></div>
+            <div class="lm-button"><a title="Browse existing feature requests and bug reports on our Github issue tracker" href="https://github.com/metapolator/metapolator/issues/new" target="_blank">Github Issues</a></div>
+            <div class="lm-button"><a title="To report a bug or request a feature, create a new issue in our Github issue tracker" href="https://github.com/metapolator/metapolator/issues/new" target="_blank">New Issue</a></div>
+            <div class="lm-divider"></div>
+            <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://metapolator.com" target="_blank">metapolator.com</a></div>
+            <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://twitter.com/metapolator" target="_blank">@metapolator</a></div>
+            <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">+metapolator</a></b></div>
+            <div class="lm-divider"></div>
+            <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Open Tech View in new Tab</a></b></div>
+            </div>
+        </div>
+    </localmenu>
 </div>
