--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -33,7 +33,7 @@
                     <div class="export-col" ng-click="instance.exportFont = !instance.exportFont">
                         <div class="instance-spacer">&nbsp;</div>
                         <div class="instance-checkmark">
-                            <div ng-if="instance.exportFont">✓</div>
+                            <div ng-if="instance.exportFont">H</div>
                         </div>
                     </div>
                 </li>
