Spash screen instructions.

--- a/purple-pill/templates/splashscreen.html
+++ b/purple-pill/templates/splashscreen.html
@@ -4,6 +4,8 @@
 <div id="splash-right">
     <h1>Metapolator</h1>
     <h2>Free Font Editor for Designing Typeface Families</h2>
+
+    <p>Run in latest Firefox, or check <a href="https://github.com/metapolator/metapolator/wiki/Getting-Started-with-Metapolator-Demo">how to run in Chrome/Chromium.</a></p>
     <!--
     <p>
     If this message does not disappear after a short moment: <h2>Your Browser may be incompatible</h2>
