--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -11,9 +11,9 @@
     </div>
 </localmenu>
 
-    <div id="instances-extra-wide" class="panel-border-with-menu">
-        <div id="fake-instances-panel">&nbsp;</div>
-        <div id="fake-fontexport-panel">&nbsp;</div>
+    <div id="instances-extra-wide" class="panel-border-with-menu" ng-style="{'width': 'calc(100% + ' + data.fontExportWidth + 'px)'}">
+        <div id="fake-instances-panel" ng-style="{'width': 'calc(100% - ' + data.fontExportWidth + 'px)'}">&nbsp;</div>
+        <div id="fake-fontexport-panel" ng-style="{'width': (data.fontExportWidth - 10) + 'px'}">&nbsp;</div>
         <div id="instances-list">
             <ul ui-sortable="sortableOptionsMasters" ng-model="data.families[0].instances" class="list-ul">
                 <li master="{{instance.id}}" sequence="0" display="{{instance.display}}" ng-mouseover="mouseoverInstance(instance)" ng-mouseleave="mouseleaveInstance(instance)" ng-repeat="instance in data.families[0].instances track by instance.id" class="list-li" ng-class="{'selected': instance == data.currentInstance}">
@@ -29,8 +29,8 @@
                             --></li>
                         </ul>
                     </span>
-                    <span class="list-edit-col rename" ng-model="instance.displayName" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}"></span>
-                    <div class="export-col" ng-click="instance.exportFont = !instance.exportFont">
+                    <span class="list-edit-col rename" ng-model="instance.displayName" ng-click="setCurrentInstance(instance)" ng-class="{'selected': instance.edit}" ng-style="{'width': 'calc(100% - ' + (data.fontExportWidth + 54) + 'px'}"></span>
+                    <div class="export-col" ng-click="instance.exportFont = !instance.exportFont" ng-style="{'width': (data.fontExportWidth - 4) + 'px'}">
                         <div class="instance-spacer">&nbsp;</div>
                         <div class="instance-checkmark">
                             <div ng-if="instance.exportFont">H</div>
@@ -49,7 +49,7 @@
         </div> 
         
         <div id="instance-tools-container">
-            <div id="instances-tools">
+            <div id="instances-tools" ng-style="{'width': 'calc(100% - ' + data.fontExportWidth + 'px)'}">
                 <div id="add-instance" ng-click="data.addInstance();" class="instance-tool push-button" ng-class="{'inactive': !data.canAddInstance()}">
                     <img src="img/addInstance.png">
                 </div>
@@ -60,7 +60,7 @@
                     <img src="img/deleteInstance.png">
                 </div>
             </div>
-            <div id="export-button" class="push-button" ng-click="data.exportFonts()" ng-class="{'inactive': !data.instancesForExport()}">
+            <div id="export-button" class="push-button" ng-click="data.exportFonts()" ng-class="{'inactive': !data.instancesForExport()}" ng-style="{'width': (data.fontExportWidth - 10) + 'px'}">
                 Export…
             </div>
         </div>
