--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -172,7 +172,7 @@
     			 }
 			
 			#view-buttons .menu-item:hover, #view-buttons .menu-item-current {
-				border: 2px solid rgba(0,0,0,0.5);;
+				border: 2px solid #515151;
 			}
 			
         #help {
