--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -788,10 +788,11 @@
             border-top: 2px solid #eee;
         }
         
-            .master-tool {
+            .list-tool {
                 float: left;
-                width: 33px;
-                height: 32px;
+                width: 30px;
+                height: 28px;
+                padding: 4px;
                 display: inline-block;
                 cursor: pointer;
                 text-align: center;
@@ -1563,40 +1564,10 @@
             margin-top: 0px;
         }
         
-            #splash-loading {
-                font-size: 20px;
-                width: 100%;
-                padding: 20px
-                text-align: center;
-            }
-            
-            #splash-loading img {
-                width: 16px;
-                height: auto;
-            }
-
-
-    #splash-loading-bar {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 60px;
-        padding: 20px;
-        text-align: center;
-        background-image: url('../img/tile-full.png');
-        background-repeat: repeat;
-        animation: animatedBackground 7s linear infinite;
-    }
-    
-    @keyframes animatedBackground {
-    from { background-position: 0 0; }
-    to { background-position: 100% 0; }
-    }
     
     #cursor-helper {
         font-size: 17px;
-        padding-top: 1px;
+        padding-top: 2px;
         color: #fff;
         text-align: center;
         width: 20px;
