--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -37,10 +37,10 @@
     </div>
     
     <div id="masters-tools">
-        <div title="import ufo" id="import-ufo" ng-click="importUfo();" class="master-tool push-button">
+        <div title="import ufo" id="import-ufo" ng-click="importUfo();" class="list-tool push-button">
             <img src="img/importUfo.png">
         </div>
-        <div title="duplicate master(s)" id="duplicate-master" ng-click="duplicateMasters();" class="master-tool push-button">
+        <div title="duplicate master(s)" id="duplicate-master" ng-click="duplicateMasters();" class="list-tool push-button">
             <img src="img/duplicateMaster.png">
         </div>
     </div>
