--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -29,7 +29,10 @@
                                 --></li>
                             </ul>
                         </span>
-                        <span class="list-edit-col rename" ng-model="master.displayName"></span>
+                        <span class="list-edit-col">
+                            <span class="rename" ng-model="master.displayName"></span>
+                            <span class="list-grip"></span>
+                        </span>
                     </li>
                 </ul>
             </li>
