New loading dialog

--- a/purple-pill/templates/splashscreen.html
+++ b/purple-pill/templates/splashscreen.html
@@ -3,6 +3,7 @@
 </div>
 <div id="splash-right">
     <h1>Metapolator</h1>
-    <h2>Free Font Editor for Designing Typeface Families</h2>
-    <p>Run in latest Firefox, or check <a href="https://github.com/metapolator/metapolator/wiki/Getting-Started">how to run in Chrome/Chromium.</a></p>
+    <h2><em>“For Designing Typeface Families”</em></h2>
+    <p>Firefox users will see this dialog disappear in a moment.</p>
+    <p>Not using Firefox? <a href="https://github.com/metapolator/metapolator/wiki/Getting-Started">Learn more…</a></p>
 </div>
