--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1580,6 +1580,12 @@
             margin-top: 0px;
         }
         
+        #splash-right p {
+            margin-top: 50px;
+        }        
+        #splash-right p + p {
+            margin-top: 10px;
+        } 
     
     #cursor-helper {
         font-size: 17px;
