--- a/purple-pill/css/main.css
+++ b/purple-pill/css/main.css
@@ -328,6 +328,8 @@ html {
 body {
   margin: 0;
   padding: 0 3em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .compatibility-info {
   background: orange;
