Font smoothing to styles.

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -42,6 +42,8 @@
 		background: #fff;
 		color: #515151;
 		padding: 5px;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
 	}
 	
 	* {
