Loading modal note about waiting if unresponsive

--- a/purple-pill/templates/splashscreen.html
+++ b/purple-pill/templates/splashscreen.html
@@ -3,7 +3,9 @@
 </div>
 <div id="splash-right">
     <h1>Metapolator</h1>
-    <h2><em>“For Designing Typeface Families”</em></h2>
-    <p>Firefox users will see this dialog disappear in a moment.</p>
+    <h2>For Designing Typeface Families</em></h2>
+    <p>Firefox users will see this dialog disappear in a moment,<br />
+      and if you see a <em>Warning: Unresponsive script</em> error<br />
+      then tick the box and click <em>Continue</em>.</p>
     <p>Not using Firefox? <a href="https://github.com/metapolator/metapolator/wiki/Getting-Started">Learn more…</a></p>
 </div>
