--- a/purple-pill/templates/specimen2.html
+++ b/purple-pill/templates/specimen2.html
@@ -5,8 +5,8 @@
             <input type="text" id="size-nr" ng-model="fontSize" size="3" class="specimen-tool">
             <size-rope></size-rope>
             <input placeholder="filter" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
-            <strict ng-if="selectedSpecimen.name != 'glyph range'"></strict>
-            <div id="font-by" ng-if="selectedSpecimen.name != 'glyph range'">
+            <strict ng-if="selectedSpecimen.name != 'Glyph Range'"></strict>
+            <div id="font-by" ng-if="selectedSpecimen.name != 'Glyph Range'">
                 font by <select ng-model="filterOptions.selectedFontby" ng-options="fontby for fontby in fontbys"></select>
             </div>
         </div>
