--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -4,7 +4,7 @@
         <div id="standard-view-tools" >
             <input type="text" id="size-nr" ng-model="fontSize" size="3" class="specimen-tool">
             <size-rope></size-rope>
-            <input placeholder="filter" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
+            <input placeholder="Filter" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
             <strict ng-if="selectedSpecimen.name != 'Glyph Range'"></strict>
             <div id="font-by" ng-if="selectedSpecimen.name != 'Glyph Range'">
                 font by <select ng-model="filterOptions.selectedFontby" ng-options="fontby for fontby in fontbys"></select>
