Caps Rename Project

--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -8,7 +8,7 @@
             <div class="lm-divider"></div>
             <div class="lm-button" ng-mouseup="closeDocument()">Close</div>
             <div class="lm-divider"></div>
-            <div class="lm-button" ng-mouseup="renameProject()">Rename project</div>
+            <div class="lm-button" ng-mouseup="renameProject()">Rename Project</div>
         </div>
     </localmenu>
 </div>
